# haskell-telegram-api

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Jedle77  LICENSE  README.md  circle.yml  stack.yaml  telegram-api.cabal
.circleci/: config.yml
app/: Main.hs
src/: Lib.hs
src/Servant/Client/: MultipartFormData.hs
src/Telegram/API/: Bot.hs  Bots.hs
src/Telegram/API/Bot/: API.hs  Data.hs  JsonExt.hs  Requests.hs  Responses.hs
src/Web/Telegram/API/: Bot.hs
src/Web/Telegram/API/Bot/: API.hs  Data.hs  JsonExt.hs  Requests.hs  Responses.hs
src/Web/Telegram/API/Bot/API/: Chats.hs  Core.hs  Edit.hs  Get.hs  Messages.hs  Payments.hs  Queries.hs  Settings.hs  Stickers.hs  Updates.hs
test/: InlineSpec.hs  JsonSpec.hs  MainSpec.hs  PaymentsSpec.hs  SettingsSpec.hs  Spec.hs  StickersSpec.hs  TestCore.hs  UpdatesSpec.hs
test-data/: cert.pem  wikipedia-telegram.txt
