name:                telegram-api
version:             0.1.0.0
synopsis:            Telegram Bot API bindings
description:         High-level bindings to the Telegram Bots API
homepage:            http://github.com/klappvisor/telegram-api#readme
license:             BSD3
license-file:        LICENSE
author:              Alexey Rodiontsev
maintainer:          alex.rodiontsev@gmail.com
copyright:           Alexey Rodiontsev (c) 2016
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.Telegram.API.Bot
                     , Web.Telegram.API.Bot.API
                     , Web.Telegram.API.Bot.Data
                     , Web.Telegram.API.Bot.Responses
                     , Web.Telegram.API.Bot.Requests
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant
                     , servant-client
                     , text
                     , either
  default-language:    Haskell2010

test-suite telegram-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , text
                     , hspec
                     , servant
                     , servant-client
                     , telegram-api
                     , http-types
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/klappvisor/telegram-api
