name:                telegram-api
version:             0.3.0.0
synopsis:            Telegram Bot API bindings
description:         High-level bindings to the Telegram Bot API
homepage:            http://github.com/klappvisor/haskell-telegram-api#readme
license:             BSD3
license-file:        LICENSE
author:              Alexey Rodiontsev
maintainer:          alex.rodiontsev@gmail.com
copyright:           Alexey Rodiontsev (c) 2016
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

extra-source-files:
  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Web.Telegram.API.Bot
                     , Web.Telegram.API.Bot.API
                     , Web.Telegram.API.Bot.Data
                     , Web.Telegram.API.Bot.Responses
                     , Web.Telegram.API.Bot.Requests
  other-modules:       Web.Telegram.API.Bot.JsonExt
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant
                     , servant-client
                     , text
                     , either
  default-language:    Haskell2010

test-suite telegram-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       MainSpec
                     , InlineSpec
  build-depends:       base
                     , text
                     , hspec
                     , servant
                     , servant-client
                     , telegram-api
                     , http-types
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/klappvisor/haskell-telegram-api
