name:                telegram-api
version:             0.5.0.0
synopsis:            Telegram Bot API bindings
description:         High-level bindings to the Telegram Bot API
homepage:            http://github.com/klappvisor/haskell-telegram-api#readme
license:             BSD3
license-file:        LICENSE
author:              Alexey Rodiontsev
maintainer:          alex.rodiontsev@gmail.com
copyright:           Alexey Rodiontsev (c) 2016
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
data-files:          test-data/christmas-cat.jpg
                   , test-data/cert.pem
                   , test-data/haskell-logo.webp
                   , test-data/lego-video.mp4
                   , test-data/Possible_PDM_signal_labeled_as_Sputnik_by_NASA.ogg
                   , test-data/concerto-for-2-trumpets-in-c-major.mp3
                   , test-data/wikipedia-telegram.txt

extra-source-files:
  README.md
  CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Web.Telegram.API.Bot
                     , Web.Telegram.API.Bot.API
                     , Web.Telegram.API.Bot.Data
                     , Web.Telegram.API.Bot.Responses
                     , Web.Telegram.API.Bot.Requests
  other-modules:       Web.Telegram.API.Bot.JsonExt
                     , Servant.Client.MultipartFormData
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , either
                     , http-api-data
                     , http-client
                     , servant == 0.7.*
                     , servant-client == 0.7.*
                     , text
                     , transformers
                     , http-media
                     , http-types
                     , mime-types
                     , bytestring
                     , string-conversions
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-binds

test-suite telegram-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       MainSpec
                     , InlineSpec
                     , JsonSpec
  build-depends:       base
                     , aeson
                     , hjpath
                     , ansi-wl-pprint
                     , http-client
                     , http-client-tls
                     , http-types
                     , hspec
                     , optparse-applicative
                     , servant == 0.7.*
                     , servant-client == 0.7.*
                     , telegram-api
                     , http-types
                     , filepath
                     , text
                     , transformers
                     , utf8-string
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-name-shadowing
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/klappvisor/haskell-telegram-api
